from Id import Id

class variable(Id):
    pass